--- a/app/css/media.css
+++ b/app/css/media.css
@@ -23,6 +23,7 @@
   display: flex;
 	height: 0;
 	overflow: hidden;
+	z-index: 2;
 }
 
 #media.play.expand {
@@ -100,14 +101,16 @@
   top: -12px;
 }
 
-#media .progress:hover .progress
-
 #media .title {
 	font-weight: 400;
 	min-height: 32px;
 	line-height: 32px;
   font-size: 16px;
   margin: 24px 0;
+  max-width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-family: 'Varela Round', 'Helvetica', 'Sans Serif';
 }
 
